--- a/web/css/main.css
+++ b/web/css/main.css
@@ -57,6 +57,9 @@ body {
 	text-align: center;
 	border-bottom:2px solid black;
 }
+.prefabs{
+
+}
 .leftDragList{
 	padding:5px;
 	height:calc(100% - 70px);
@@ -150,9 +153,9 @@ body {
 #dragPlaceholder{
 	user-select: none;
 	height:10px;
-	/* background: #666; */
 	border-radius: 3px;
 	margin:2px;
+	display: none;
 }
 #dragableGhostWrapper{
 	position: fixed;
