--- a/web/css/main.css
+++ b/web/css/main.css
@@ -6,17 +6,15 @@ body {
 
 * {
 	box-sizing: border-box;
+	font-family: monospace;
 }
-.activator{
-	height:40px;
-	width:20px;
-	background-color: grey;
-	left:0px;
-}
+
+
+
+/* Tree, Pins and Connectors */
 .contents{
 	padding: 8px;
 }
-
 /* topBar */
 .topBar{
 	top:0px;
@@ -24,7 +22,6 @@ body {
 	height:35px;
 	width:100%;
 	background: #AAA;
-	border-bottom: 2px solid black;
 }
 
 /*UI main panel*/
@@ -43,9 +40,9 @@ body {
 	background: #EEE;
 	height:100%;
 	left:0px;
-	width:300px;
+	width:250px;
 	top:0px;
-	border-right:2px solid black;
+	/* border-right:2px solid #fff; */
 }
 .leftMenu{
 	background: #CCC;
@@ -55,10 +52,7 @@ body {
 	height:35px;
 	padding-top: 8px;
 	text-align: center;
-	border-bottom:2px solid black;
-}
-.prefabs{
-
+	/* border-bottom:2px solid black; */
 }
 .leftDragList{
 	padding:5px;
@@ -66,16 +60,6 @@ body {
 	overflow-y: auto;
 }
 
-/* Middle Panel */
-.middlePanel{
-	position: absolute;
-	background: #EEE;
-	height:100%;
-	left:300px;
-	width:300px;
-	top:0px;
-	border-right:2px solid black;
-}
 
 /*Preview*/
 .previewPanel{
@@ -84,11 +68,6 @@ body {
 	left: 600px;
 	width: calc(100% - 600px);
 	height: 50%;
-	border-bottom: 2px solid black;
-}
-
-*{
-	font-family: monospace;
 }
 .treeContainer{
 	position: fixed;
@@ -96,7 +75,6 @@ body {
 	top:50px;
 	width:250px;
 	height:500px;
-	border:2px solid black;
 	padding:5px;
 }
 
@@ -117,11 +95,6 @@ body {
 	transform: rotate(-90deg);
 	transition: 0.2s;
 }
-.connectorIcon{
-	height:20px;
-	margin-top:5px;
-	margin-left:0px;
-}
 .name{
 	position: relative;
   vertical-align: middle;
@@ -133,16 +106,13 @@ body {
 .pin{
 	user-select: none;
 	height:30px;
-	/* background: #aaa; */
 	border-radius: 3px;
-	/* margin:1px; */
-	/* transition: 0.2s; */
 }
 #prefabPin{
 	display: none;
 }
 
-.pinIcon{
+.icon{
 	height:20px;
 	margin-top:5px;
 	margin-left:5px;
@@ -150,9 +120,14 @@ body {
 .selected{
 	background-color: #CCC;
 }
+.board{
+	user-select: none;
+	height:30px;
+	border-radius: 3px;
+}
 #dragPlaceholder{
 	user-select: none;
-	height:10px;
+	height:20px;
 	border-radius: 3px;
 	margin:2px;
 	display: none;
@@ -165,68 +140,56 @@ body {
 	width:300px;
 }
 
-/*Wizard screen*/
-.grey{
-	position: fixed;
-	left:0px;
-	top:0px;
-	width:100%;
+
+/* INSPECTOR*/
+
+/* Middle Panel */
+.middlePanel{
+	position: absolute;
+	background: #EEE;
 	height:100%;
-	background-color: rgba(0,0,0,0.5);
+	left:250px;
+	width:300px;
+	top:0px;
 }
-.wizardContainer{
-	position:relative;
-	top:100px;
-	width:70%;
-	left:15%;
-	height:80%;
-	background: white;
-	border-radius: 10px;
-	padding: 20px;
+.middleMenu{
+	background: #CCC;
+	top:0px;
+	left:0px;
+	width:100%;
+	height:35px;
+	padding-top: 8px;
+	text-align: center;
+	/* border-bottom:2px solid black; */
 }
-.wizardHeader{
-	font-size: 30px;
+
+.inspectorPanel{
+	background: #dedede;
+	padding: 8px;
+	margin: 10px;
+	border-radius: 5px;
+	display: none;
+}
+.panelLabel{
 	font-weight: bold;
-	display: block;
-	margin-bottom:20px;
+	font-size: 15px;
 }
-.wizardSubHeader{
-	font-weight: bold;
-	margin-top:25px;
-	display:block;
+table {
+  width: 100%;
+  border-collapse: collapse;
+	table-layout: fixed;
 }
-.wizardShortTextInput{
-	font-size: 16px;
-  font-size: max(16px, 1em);
-  padding: 0.25em 0.5em;
-  border: 2px solid black;
-  border-radius: 4px;
-	width:100px;
-	background-color: white;
+td{
+	overflow: wrap;
+	border-collapse: collapse;
+	width:50%;
 }
-.wizardMediumTextInput{
-	font-size: 16px;
-  font-size: max(16px, 1em);
-  padding: 0.25em 0.5em;
-  border: 2px solid black;
-  border-radius: 4px;
-	width:200px;
-	background-color: white;
+.inspectorPanel input, .inspectorPanel select{
+	width:100%;
 }
-.addSomeSpaceBelow{
-	padding-bottom: 10px;
-}
-.wizardCancelButton{
-	position: absolute;
-	right:100px;
-	bottom:15px;
-	height:40px;
-	width:100px;
-}
-.wizardOkButton{
-	position: absolute;
-	right:20px;
-	bottom:15px;
-	height:40px;
-	width:60px;
+.inspectorPanel input[type=checkbox]{
+	text-align: left;
+	width:18px;
+	height:18px;
+	margin:0px;
 }
