--- a/web/css/main.css
+++ b/web/css/main.css
@@ -595,6 +595,134 @@ td{
 	height:30px;
 }
 
+
+.connectorWizard{
+	display: none;
+	position: fixed;
+	left:0px;
+	top:0px;
+	width:100%;
+	height:100%;
+	background-color: rgba(0, 0, 0, 0.3);
+	border-radius: 5px;
+}
+.connectorWizardCenter{
+	position: relative;
+	left: 50%;
+	top:10%;
+	float: left;
+}
+.connectorWizardCenterInside{
+	display: inline-flex;
+	position: relative;
+	left: -50%;
+	float: left;
+}
+.connectorInnerWindow{
+	width: 350px;
+	height: 70%;
+	margin-right: 10px;
+	background-color: #f3f3f3;
+	box-shadow: 1px 5px 17px 3px rgba(0,0,0,0.42);
+}
+.connectorContainer {
+	display: grid;
+	grid-template-columns: 1fr;
+	grid-template-rows: 40px 1fr 40px;
+	grid-column-gap: 0px;
+	grid-row-gap: 0px;
+	height:100%;
+	width:100%;
+}
+.cn_body{
+	margin: 5px;
+	background: white;
+	padding:5px;
+	overflow-y: auto;
+}
+.cn_table{
+	width:100%;
+}
+.cn_table input {
+    width: 100%;
+}
+.cn_tipslot{
+	margin-bottom:5px;
+}
+.cn_saveBtn{
+	float:right;
+	margin-top:5px;
+	margin-right:5px;
+	width:70px;
+	height:30px;
+}
+.connectorLibraryInnerWindow{
+	width: 500px;
+	height: 70vh;
+	background-color: #f3f3f3;
+	box-shadow: 1px 5px 17px 3px rgba(0,0,0,0.42);
+}
+.connectorLibraryContainer {
+	display: grid;
+	grid-template-columns: 1fr;
+	grid-template-rows: 40px 1fr 40px;
+	grid-column-gap: 0px;
+	grid-row-gap: 0px;
+	height:100%;
+	width:100%;
+}
+.cn_bodyLibrary{
+	margin: 5px;
+	background: white;
+	padding:5px;
+	overflow-y: auto;
+}
+.cn_slot{
+	display: none;
+	background:#EEE;
+	border-radius: 5px;
+	padding: 5px;
+	min-height: 40px;
+	margin-bottom: 5px;
+}
+.cn_s1{
+	width:30%;
+	padding:5px;
+}
+.cn_s2{
+	width:80%;
+	padding:5px;
+}
+
+.addToLibraryWizard{
+	display: none;
+	position: fixed;
+	left:0px;
+	top:0px;
+	width:100%;
+	height:100%;
+	background-color: rgba(0, 0, 0, 0.3);
+	border-radius: 5px;
+}
+.atlInnerWindow{
+	position: fixed;
+	left:calc(50% - 300px);
+	top:calc(50% - 100px);
+	width: 600px;
+	height: 200px;
+	background-color: #f3f3f3;
+	box-shadow: 1px 5px 17px 3px rgba(0,0,0,0.42);
+}
+.atlContainer {
+	display: grid;
+	grid-template-columns: 1fr;
+	grid-template-rows: 40px 1fr 40px;
+	grid-column-gap: 0px;
+	grid-row-gap: 0px;
+	height:100%;
+	width:100%;
+}
+
 #banner{
 	position:absolute;
 	left:calc(50% - 250px);
