--- a/web/css/main.css
+++ b/web/css/main.css
@@ -219,6 +219,9 @@ body {
 	margin:5px;
 	display: block;
 }
+.exEmStopBtn{
+	color:red
+}
 
 .calibrationPanel{
 	width: calc(100% - 520px);
@@ -510,13 +513,19 @@ td{
 .configContainer {
 	display: grid;
 	grid-template-columns: minmax(100px,400px) minmax(400px,1fr);
-	grid-template-rows: 50px 1fr 40px;
+	grid-template-rows: 50px 50px 1fr 40px;
 	grid-column-gap: 0px;
 	grid-row-gap: 0px;
 	height:100%;
 	width:100%;
 }
-.cf_header { grid-area: 1 / 1 / 2 / 4;
+.cf_header { 
+	grid-area: 1 / 1 / 2 / 4;
+	background:white;
+	padding: 14px;
+}
+.cf_top { 
+	grid-area: 2 / 2 / 2 / 2;
 	background:white;
 	padding: 14px;
 }
@@ -525,9 +534,10 @@ td{
 	margin:0px;
 }
 .cf_topicContainer{
+	grid-area: 2 / 1 / span 3 / 1;
 	padding:5px;
 	border-right: solid white 5px;
-  overflow-y: auto;
+	overflow-y: auto;
 }
 .cf_topic{
 	width:100%;
@@ -541,10 +551,11 @@ td{
 	padding:10px;
 }
 .cf_gholder{
+	grid-area: 3 / 2 / 3 / 2;
 	overflow: hidden;
 }
 .cf_footer {
-	grid-area: 3 / 1 / 3 / 3;
+	grid-area: 4 / 1 / 4 / span 2;
 	text-align: right;
 }
 .cf_saveBtn{
@@ -552,6 +563,18 @@ td{
 	margin-right:5px;
 	width:70px;
 	height:30px;
+}
+.cf_infotext{
+	display: inline;
+}
+.cf_execute{
+	float:right;
+}
+.cf_status{
+	display: inline;
+    float: right;
+    margin: 0px;
+    margin-right: 10px;
 }
 
 .solderTipWizard{
