--- a/web/css/main.css
+++ b/web/css/main.css
@@ -1,3 +1,59 @@
+[data-theme="dark"]{
+	--header: rgb(66 66 66);
+	--background: #191919;
+	--panel: #313131;
+	--panel-inside-panel: #393939;
+	--text-color: rgb(200, 200, 200);
+	--button-color: #404040;
+	--button-outline: #4f4f4f;
+	--input-color: #191919;
+	--config-inner-window: #292929;
+	--solder-profile-panel: #161616;
+	--solder-tip-window: #222222;
+	color: var(--text-color)
+}
+
+[data-theme="dark"] input, textarea{
+	background-color: var(--input-color);
+	color: var(--text-color);
+	border: solid transparent 2px; 
+}
+
+[data-theme="dark"] button{
+	background-color: var(--button-color);
+	color: var(--text-color);
+	border: solid var(--button-outline) 1px; 
+}
+
+[data-theme="dark"] canvas{
+	background-color: var(--background);
+}
+
+[data-theme="dark"] select{
+	background: var(--button-color);
+	color: var(--text-color);
+}
+
+[data-theme="dark"] img {
+	filter:invert(0.8);
+}
+
+[data-theme="dark"] .leftDragList::-webkit-scrollbar { /* WebKit */
+    width: 0;
+    height: 0;
+}
+
+[data-theme="light"]{
+	--header: #AAA;
+	--background: #EEE;
+	--panel: #DEDEDE;
+	--panel-inside-panel: #e9e9e9;
+	--config-inner-window: #efefef;
+	--solder-profile-panel: white;
+	--text-color: black;
+	--solder-tip-window: #f3f3f3;
+}
+
 body {
 	font-family: sans-serif;
 	margin: 0px;
@@ -26,18 +82,25 @@ body {
 	left:0px;
 	height:35px;
 	width:100%;
-	background: #AAA;
+	background: var(--header);
 	padding:5px;
 }
 .fileMenu{
 	height: 35px;
   position: relative;
+  background: var(--button-color);
   top: -5px;
   border: none;
-  background: #a2a2a2;
-	width:60px;
+  width:60px;
 }
 
+
+.connectionTextHolder{
+	position:absolute;
+	right:10px;
+	top:7px;
+	background: var(--header);
+}
 .topBarButton{
 	height: 35px;
   position: relative;
@@ -82,7 +145,7 @@ body {
 /* Left Panel */
 .leftPanel{
 	position: absolute;
-	background: #EEE;
+	background: var(--background);
 	height:100%;
 	left:0px;
 	width:220px;
@@ -90,7 +153,7 @@ body {
 	/* border-right:2px solid #fff; */
 }
 .leftMenu{
-	background: #CCC;
+	background: var(--panel);
 	top:0px;
 	left:0px;
 	width:100%;
@@ -108,7 +171,7 @@ body {
 
 /*Preview*/
 .previewPanel{
-	/* background: red; */
+	background: var(--background);
 	position: absolute;
 	left: 470px;
 	width: calc(100% - 470px);
@@ -116,7 +179,7 @@ body {
 }
 
 .execPanel{
-	background: #E5E4E5;
+	background: var(--panel);
 	position: absolute;
 	right:0px;
 	bottom:0px;
@@ -128,8 +191,9 @@ body {
 .execSelectorPanel{
 	height: 100%;
 	width: 120px;
-	border-right: 10px solid #eee;
+	border-right: 10px solid var(--background);
 	margin-right: 10px;
+	padding-right:5px;
 	overflow-x:auto;
 	overflow-y:hidden;
 }
@@ -141,7 +205,7 @@ body {
 	position:relative;
 	width:510px;
 	height:300px;
-	border-right: 10px solid #eee;
+	border-right: 10px solid var(--background);
 	margin-right: 10px;
 }
 .jogBtn{
@@ -153,7 +217,7 @@ body {
 .execControlPanel{
 	height: 100%;
 	width: 150px;
-	border-right: 10px solid #eee;
+	border-right: 10px solid var(--background);
 	margin-right: 10px;
 	overflow-x:auto;
 	overflow-y:hidden;
@@ -194,12 +258,12 @@ body {
 	padding: 10px;
 	margin-bottom: 5px;
 	width: 100%;
-	background-color: #eee;
+	background-color: var(--panel-inside-panel);
 }
 .progressBarShell{
 	width:100%;
 	height:20px;
-	background-color: #CCC;
+	background-color: var(--input-color);
 }
 .progressBarInside{
 	height:100%;
@@ -286,7 +350,7 @@ body {
 	margin-left:5px;
 }
 .selected{
-	background-color: #CCC;
+	background-color: var(--panel);
 }
 .board{
 	user-select: none;
@@ -314,14 +378,14 @@ body {
 /* Middle Panel */
 .middlePanel{
 	position: absolute;
-	background: #EEE;
+	background: var(--background);;
 	height:100%;
 	left:220px;
 	width:250px;
 	top:0px;
 }
 .middleMenu{
-	background: #CCC;
+	background: var(--panel);
 	top:0px;
 	left:0px;
 	width:100%;
@@ -332,7 +396,7 @@ body {
 }
 
 .inspectorPanel{
-	background: #dedede;
+	background: var(--panel);
 	padding: 8px;
 	margin: 10px;
 	border-radius: 5px;
@@ -391,7 +455,7 @@ td{
 	top:50px;
 	width: calc(100% - 100px);
 	height: calc(100% - 100px);
-	background-color: #f3f3f3;
+	background-color: var(--config-inner-window);
 	box-shadow: 1px 5px 17px 3px rgba(0,0,0,0.42);
 }
 .solderProfileContainer {
@@ -405,7 +469,7 @@ td{
 }
 
 .sp_header { grid-area: 1 / 1 / 2 / 4;
-	background:white;
+	background:var(--config-inner-window);
 	padding: 14px;
 }
 .sp_title{
@@ -415,23 +479,26 @@ td{
 .sp_profileCtrl{
 	grid-area: 2 / 1 / 3 / 2;
 	padding:5px;
-	background: #CCC;
+	background: var(--panel);
 }
 
 .sp_profileContainer {
 	grid-area: 3 / 1 / 4 / 2;
 	margin: 5px;
-	background: white;
+	background: var(--solder-profile-panel);
 	padding:5px;
 }
 .profileSlot{
 	margin-bottom:5px;
+	padding:5px;
+	background:var(--panel);
+	border-radius:5px
 }
 .sp_varCtrl {
 	grid-area: 2 / 2 / 3 / 3;
 	text-align: center;
 	padding: 5px;
-	background: #CCC;
+	background: var(--panel);
 }
 .sp_ctrlMenuOption{
 	width:100%;
@@ -440,27 +507,32 @@ td{
 }
 .sp_variableContainer {
 	grid-area: 3 / 2 / 4 / 3;
-	background: white;
+	background: var(--solder-profile-panel);
   margin: 5px;
 	padding:5px;
 }
 .sp_variable{
 	display:none;
 	padding:5px;
-	background:#ddd;
+	background:var(--panel);
 	border-radius:5px;
 	margin-bottom: 5px;
 }
 .div6 {
 	grid-area: 2 / 3 / 3 / 4;
-	background: #CCC;
+	background: var(--panel);
 }
 .sp_gholder {
 	grid-area: 3 / 3 / 4 / 4;
-	background: white;
+	background: var(--solder-profile-panel);
   margin: 5px;
   overflow: hidden;
 }
+
+[data-theme="dark"] #sp_gcodeBox{
+	filter: invert(1);
+}
+
 #gTemplateError{
 	color:red;
 	position: absolute;
@@ -507,7 +579,7 @@ td{
 	top:50px;
 	width: 80%;
 	height: calc(100% - 100px);
-	background-color: #f3f3f3;
+	background-color: var(--config-inner-window);
 	box-shadow: 1px 5px 17px 3px rgba(0,0,0,0.42);
 }
 .configContainer {
@@ -521,12 +593,12 @@ td{
 }
 .cf_header { 
 	grid-area: 1 / 1 / 2 / 4;
-	background:white;
+	background:var(--config-inner-window);
 	padding: 14px;
 }
 .cf_top { 
 	grid-area: 2 / 2 / 2 / 2;
-	background:white;
+	background:var(--config-inner-window);
 	padding: 14px;
 }
 .cf_title{
@@ -536,12 +608,12 @@ td{
 .cf_topicContainer{
 	grid-area: 2 / 1 / span 3 / 1;
 	padding:5px;
-	border-right: solid white 5px;
+	border-right: solid var(--config-inner-window) 5px;
 	overflow-y: auto;
 }
 .cf_topic{
 	width:100%;
-	background: #DEDEDE;
+	background: var(--panel);
 	padding:10px;
 	border-radius: 5px;
   margin-bottom: 5px;
@@ -553,6 +625,9 @@ td{
 .cf_gholder{
 	grid-area: 3 / 2 / 3 / 2;
 	overflow: hidden;
+}
+[data-theme="dark"] .cf_gholder{
+	filter:invert(1);
 }
 .cf_footer {
 	grid-area: 4 / 1 / 4 / span 2;
@@ -593,7 +668,7 @@ td{
 	top:calc(50% - 200px);
 	width: 300px;
 	height: 400px;
-	background-color: #f3f3f3;
+	background-color: var(--solder-tip-window);
 	box-shadow: 1px 5px 17px 3px rgba(0,0,0,0.42);
 }
 .solderTipContainer {
@@ -614,16 +689,19 @@ td{
 }
 .st_buttons{
 	padding:5px;
-	background:#CCC;
+	background:var(--panel);
 }
 .st_body{
 	margin: 5px;
-	background: white;
+	background: var(--solder-profile-panel);
 	padding:5px;
 	overflow-y: auto;
 }
 .st_tipslot{
 	margin-bottom:5px;
+	padding:5px;
+	background:var(--panel);
+	border-radius:5px;
 }
 .st_saveBtn{
 	float:right;
